Cree un correo digitaleventssystem@gmail.com Contraseña:gaesevents

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
@@ -4,7 +4,6 @@
 lbl_grafico_eventos=Grafrico Eventos
 lbl_aqui_encontraras_grafrico=Aqu\u00ed encontraras un reporte grafrico de los eventos sin importar el estado ordenados por meses
 lbl_eventos_reservados=Eventos Reservados
-lbl_aqui_encontraras_eventos_aprobnados=Aqu\u00ed encontraras los eventos aprobados
 btn_anadir_solicitud=A\u00f1adir Solicitud
 lbl_id_evento=ID
 lbl_usuario_evento=USUARIO
@@ -12,3 +11,9 @@ lbl_contacto=CONTACTO
 lbl_fecha_reserva=FECHA RESERVA
 lbl_direccion=DIRECCION
 lbl_estado=ESTADO
+lbl_saldo = SALDO
+lbl_options = OPCIONES
+lbl_aqui_encontraras_aventos_approbnados=Aqu\u00ed encontraras los eventos aprobados
+btn_add_address=A\u00f1adir Solicitud
+lbl_id_event=ID
+lbl_state=ESTADO
