--- a/digital_events_repository/src/java/digitalevents/languaje/principal/header_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/header_es.properties
@@ -1,6 +1,8 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_dashboard]=Pagina Principal
+lbl_dashboard1=Dashboard
 lbl_toggle_navigation=Paleta de Navegacion
 lbl_cerar_session=Cerrar Sesi\u00f3n
+lbl_status=Estado
+lbl_cuenta=Cuenta
