Corregí el idioma

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
@@ -1,19 +1,21 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafico_eventos=Grafrico Eventos
-lbl_aqui_encontraras_grafrico=Aqu\u00ed encontraras un reporte grafrico de los eventos sin importar el estado ordenados por meses
-lbl_eventos_reservados=Eventos Reservados
-btn_anadir_solicitud=A\u00f1adir Solicitud
-lbl_id_evento=ID
-lbl_usuario_evento=USUARIO
-lbl_contacto=CONTACTO
-lbl_fecha_reserva=FECHA RESERVA
-lbl_direccion=DIRECCION
-lbl_estado=ESTADO
-lbl_saldo = SALDO
-lbl_options = OPCIONES
-lbl_aqui_encontraras_aventos_approbnados=Aqu\u00ed encontraras los eventos aprobados
-btn_add_address=A\u00f1adir Solicitud
-lbl_id_event=ID
-lbl_state=ESTADO
+lbl_grafico_eventos = Chart Events
+lbl_aqui_encontraras_grafrico = Here you will find a graphical report of the events regardless of the state ordered by months
+lbl_eventos_reservados = Events Reserved
+lbl_aqui_encontraras_aventos_approbnados = Here you will find the approved events
+btn_add_address = Add Request
+lbl_id_event = ID
+lbl_usuario_evento = USER
+lbl_contacto = CONTACT
+lbl_fecha_reserva = RESERVATION DATE
+lbl_direccion = ADDRESS
+lbl_state = STATE
+lbl_saldo = BALANCE
+lbl_options = OPTIONS
+btn_add_address = Add Request
+lbl_id_event = ID
+lbl_state = STATUS
+btn_anadir_solicitud=Add Request
+lbl_estado=STATUS
