--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
@@ -1,43 +1,43 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_inventario=Grafico Estadistico Inventario+
-lbl_aqui_encontraras_grafrico=Aqu\u00ed encontraras un grafrico estadistico en el cual se muestra la cantidad de materiales que se encuentran en buen estado.
-lbl_inventario=Inventario
-lbl_aqui_encontras=Aqu\u00ed encontraras los materiales que se encuentran en el almacen.
-lbl_anadir_material=A\u00f1adir Material
-lbl_id=ID
-lbl_tipo_material=TIPO MATERIAL
-lbl_cantidad=CANTIDAD
-lbl_estado=ESTADO
-lbl_disponibilidad=DISPONIBILIDAD
-btn_opciones=OPCIONES
-lbl_actualizar_solicitud=Actualizar Solicitud
-lbl_id_material=ID Material:
-lbl_tipo_material=Tipo Material:
-lbl_cantidad=Cantidad:
-lbl_estado_material=Estado:
-lbl_disponibilidad=Disponibilidad:
-lbl_seleccionar=Seleccione si se encuentra disponible
-lbl_cerrar_modal=Cerrar
-lbl_actualizar=Actualizar
-lbl_eliminar=Eliminar el material seleccionado
-lbl_esta_seguro=\u00bfEst\u00e1 seguro de eliminar la solictiud
-lbl_esta_seguro_e=definitivamente del sistema?
-lbl_no=No
-lbl_si=Si
-lbl_actualizar_imagen_material=Actualizar Imagen Material
-lbl_cerrar=Cerrar
-lbl_carga_archivos=Cargar Archivos Masivamente
-lbl_cargar_csv=Cargar CSV
-lbl_cerrar_archivos=Cerrar
-lbl_materiales_1=Materiales
-lbl_nuevo_material=Nuevo Material
-lbl_nuevo_form_nuevo=Formulario Nuevo Material
-lbl_tipo_material=Tipo Material:
-lbl_cantidad_material=Cantidad:
-lbl_estado=Estado:
-lbl_bueno=BUENO
-lbl_malo=MALO
-lbl_disponibilidad=Disponibilidad:
-lbl_a\u00f1adir_material:A\u00f1adir Material
+lbl_grafrico_inventario = Statistical Graph Inventory +
+lbl_aqui_encontraras_grafrico = Here you will find a graphical statistic in which the amount of materials that are in good condition is shown.
+lbl_inventario = Inventory
+lbl_aqui_encontras = Here you will find the materials that are in the warehouse.
+lbl_anadir_material = Add Material
+lbl_id = ID
+lbl_type_material = TYPE OF MATERIAL
+lbl_cantidad = AMOUNT
+lbl_state = STATE
+lbl_availability = AVAILABILITY
+btn_options = OPTIONS
+lbl_actualizar_solicitud = Update Request
+lbl_id_material = Material ID:
+lbl_type_material = Material Type:
+lbl_cantidad = Quantity:
+lbl_estado_material = Status:
+lbl_availability = Availability:
+lbl_select = Select if available
+lbl_cerrar_modal = Close
+lbl_actualizar = Update
+lbl_clean = Delete the selected material
+lbl_esta_seguro = Are you sure of eliminating the solictiud
+lbl_esta_seguro_e = definitely from the system?
+lbl_no = No
+lbl_si = Yes
+lbl_actualizar_imagen_material = Update Material Image
+lbl_cerrar = Close
+lbl_carga_archivos = Load Files Massively
+lbl_cargar_csv = Load CSV
+lbl_cerrar_archivos = Close
+lbl_materiales_1 = Materials
+lbl_nuevo_material = New Material
+lbl_nuevo_form_nuevo = New Material Form
+lbl_type_material = Material Type:
+lbl_cantidad_material = Quantity:
+lbl_estado = Status:
+lbl_bueno = GOOD
+lbl_malo = BAD
+lbl_availability = Availability:
+lbl_add_material: Add Material
