--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
@@ -1,55 +1,71 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_usuarios=Gr\u00e1fico Estadistico Usuarios
-lbl_aqui_grafico_usuarios=Aqui encontraras el reporte de la fecha en que fue modificada ordenada por el mes.
-lbl_usuarios_sistema=Usuarios del Sistema
-lbl_aqui_encontraras_usuarios=Aqu\u00ed encontraras todos los usuarios registrados en el sistema.
-lbl_anadir_usuario=A\u00f1adir Usuario
-lbl_ID=ID
-lbl_tipo_doc=TD
-lbl_nombres=NOMBRES
-lbl_apellidos=APELLIDOS
-lbl_correo=CORREO
-lbl_OPCIONES=OPCIONES
-lbl_roles_usuario=Roles de Usuario
-lbl_anadir_rol=A\u00f1adir Rol
-lbl_ID=ID
-lbl_NOMBRE=NOMBRE
-lbl_OPCIONES_u=OPCIONES
-lbl_tipos_documento=Tipos Documento
-lbl_anadir_tipos=A\u00f1adir T.D
-lbl_id_tipo=ID
-lbl_sigla=SIGLA
-lbl_nombre_tipo=NOMBRE
-lbl_opciones=OPCIONES
-lbl_actualizar_usuario=Actualizar Usuario
-lbl_nombres_usuario=Nombres
-lbl_apellidos_usuario=Apellidos
-lbl_seleccione_tipos=Seleccione un tipo de documento
-lbl_numero_documento=Numero de documento
-lbl_direccion_usuario=Direccion
-lbl_ingrese_telefono=Ingrese un telefono
-lbl_seleccione_estado=Seleccione un nuevo estado
-lbl_cerrar=Cerrar
-lbl_actualizar=Actualizar
-lbl_informacion_estado=Informaci\u00f3n del usuario seleccionado
-lbl_nombre_usuario=Nombre:
-lbl_apellido=Apellidos:
-lbl_tipo_documento=Tipo Documento:
-lbl_documento=Documento:
-lbl_fecha_nacimiento=Fecha Nacimiento:
-lbl_correo=Correo:
-lbl_genero=Genero:
-lbl_estado=Estado:
-lbl_rol=Rol:
-lbl_confirmar=Confirmar
-lbl_eliminar_usuario_seleccionado=Eliminar el usuario seleccionado
-lbl_estaseguro=\u00bfEst\u00e1 seguro de eliminar el usuario
-lbl_esteaseguro_1=definitivamente del sistema?
-lbl_si=Si
-lbl_no=No
-lbl_cargar=Cargar Archivos Masivamente
-lbl_cargar=Cargar CSV
-lbl_cerrar=Cerrar
-btn_cargar=Cargar
+lbl_grafrico_usuarios = Statistical Graph Users
+lbl_aqui_grafico_usuarios = Here you will find the report of the date it was modified ordered by the month.
+lbl_usuarios_sistema = System Users
+lbl_aqui_encontraras_usuarios = Here you will find all registered users in the system.
+lbl_anadir_usuario = Add User
+lbl_ID = ID
+lbl_tipo_doc = TD
+lbl_nombres = NAMES
+lbl_surname = LAST NAME
+lbl_correo = MAIL
+lbl_OPTIONS = OPTIONS
+lbl_roles_usuario = User Roles
+lbl_anadir_rol = Add Role
+lbl_ID = ID
+lbl_NOMBRE = NAME
+lbl_OPCIONES_u = OPTIONS
+lbl_tipos_documento = Types Document
+lbl_add_types = Add T.D
+lbl_id_type = TD
+lbl_sigla = SIGLA
+lbl_nombre_tipo = NAME
+lbl_options = OPTIONS
+lbl_actualizar_usuario = Update User
+lbl_usernames = Names
+lbl_sombre_usuario = Last name
+lbl_seleccione_tipos = Select a type of document
+lbl_numero_documento = Document number
+lbl_direccion_usuario = Address
+lbl_ingrese_telefono = Enter a phone
+lbl_seleccione_estado = Select a new state
+lbl_cerrar = Close
+lbl_actualizar = Update
+lbl_informacion_estado = Information of the selected user
+lbl_username = Name:
+lbl_apellido = Surname:
+lbl_type_document = Type Document:
+lbl_documento = Document:
+lbl_fecha_nacimiento = Date of Birth:
+lbl_mail = Mail:
+lbl_genero = Genre:
+lbl_estado = Status:
+lbl_rol = Role:
+lbl_confirmar = Confirm
+lbl_eliminar_usuario_seleccionado = Delete the selected user
+lbl_estaseguro = Are you sure to delete the user
+lbl_esteaseguro_1 = definitely from the system?
+lbl_si = Yes
+lbl_no = No
+lbl_load = Load files massively
+lbl_load = Load CSV
+lbl_cerrar = Close
+btn_load = Load
+lbl_usuarios_sistema=System Users
+lbl_ingrese_telefono = Enter a phone
+lbl_masculino = Male
+lbl_femenino = Female
+lbl_otro = Other
+lbl_seleccione_nuevo_estado = Select a new state
+lbl_usuarios_otro = Users
+lbl_nuevo_usuario = New User
+lbl_form_nuevo_usuario = New User Form
+lbl_ingrese_su_date = Enter your birth date
+lbl_seleccione_rol = Select a role
+lbl_contresenia = Password
+lbl_confirm_password = Confirm Password
+lbl_ingrese_telefono = Enter a phone
+lbl_seleccione_estado = Select state
+lbl_anadir_usuario = Add User
