--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_es.properties
@@ -1,18 +1,19 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_actaulizar_perfil=Formulario Actualizar Perfil
-lbl_id_usuario=ID Usuario
-lbl_seleccione_documento=Seleccione un tipo de documento
-lbl_numero_documento=Numero Documento
-lbl_nombre=Nombres
-lbl_apellidos=Apellidos
-lbl_direccion=Direccion
-lbl_fecha_nacimiento=Fecha Nacimiento
-lbl_correo=Correo
-lbl_contrasenia=Contrasena
-lbl_telefono=Telefonos
-lbl_genero=Genero
-lbl_estado=Estado
+lbl_actaulizar_perfil = Form Update Profile
+lbl_id_user = User ID
+lbl_seleccione_documento = Select a document type
+lbl_numero_documento = Document Number
+lbl_nombre = Names
+lbl_last = Surnames
+lbl_direccion = Address
+lbl_fecha_nacimiento = Date Birth
+lbl_mail = Mail
+lbl_contrasenia = Password
+lbl_telefono = Phones
+lbl_genero = Gender
+lbl_estado = State
+lbl_seleccione_estado = Select a new state
+lbl_actualizar = Update Information
 lbl_seleccione_estado=Seleccione un nuevo estado
-lbl_actualizar=Actualizar Informacion
