--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
@@ -1,21 +1,21 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafico_eventos = Chart Events
-lbl_aqui_encontraras_grafrico = Here you will find a graphical report of the events regardless of the state ordered by months
-lbl_eventos_reservados = Events Reserved
-lbl_aqui_encontraras_aventos_approbnados = Here you will find the approved events
-btn_add_address = Add Request
+lbl_grafico_eventos = Grafico Eventos
+lbl_aqui_encontraras_grafrico = Aqui encontraras un grafico estadistico de los eventos que fueron realizados ordenado por meses
+lbl_eventos_reservados = Eventos Reservados
+lbl_aqui_encontraras_aventos_approbnados = Aqui enocntraras los eventos que fueron aprobados
+btn_add_address = A\u00f1adir Solicitud
 lbl_id_event = ID
-lbl_usuario_evento = USER
-lbl_contacto = CONTACT
-lbl_fecha_reserva = RESERVATION DATE
-lbl_direccion = ADDRESS
-lbl_state = STATE
-lbl_saldo = BALANCE
-lbl_options = OPTIONS
-btn_add_address = Add Request
+lbl_usuario_evento = USUARIO
+lbl_contacto = CONTACTO
+lbl_fecha_reserva = FECHA DE RESERVACION
+lbl_direccion = TELEFONO
+lbl_state = ESTADO
+lbl_saldo = SALDO
+lbl_options = OPCIONES
+btn_add_addressl = Agregar Solicitud
 lbl_id_event = ID
-lbl_state = STATUS
-btn_anadir_solicitud=Add Request
-lbl_estado=STATUS
+lbl_state = ESTADO
+btn_anadir_solicitud=Agregar Solicitud
+lbl_estado=ESTADO
