--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
@@ -1,43 +1,45 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_inventario = Statistical Graph Inventory +
-lbl_aqui_encontraras_grafrico = Here you will find a graphical statistic in which the amount of materials that are in good condition is shown.
-lbl_inventario = Inventory
-lbl_aqui_encontras = Here you will find the materials that are in the warehouse.
-lbl_anadir_material = Add Material
+lbl_grafrico_inventario =   Grafico Estadistico Inventario
+lbl_aqui_encontraras_grafrico = Aqui encontraras un grafrico estadisco en el cual muestra los materiales y su estado ordenado por meses.
+lbl_inventario = Inventario
+lbl_aqui_encontras = Aqui enocntraras los metariales del almacen
+lbl_anadir_material = Agregar Material
 lbl_id = ID
-lbl_type_material = TYPE OF MATERIAL
-lbl_cantidad = AMOUNT
-lbl_state = STATE
-lbl_availability = AVAILABILITY
-btn_options = OPTIONS
-lbl_actualizar_solicitud = Update Request
-lbl_id_material = Material ID:
-lbl_type_material = Material Type:
-lbl_cantidad = Quantity:
-lbl_estado_material = Status:
-lbl_availability = Availability:
-lbl_select = Select if available
-lbl_cerrar_modal = Close
-lbl_actualizar = Update
-lbl_clean = Delete the selected material
-lbl_esta_seguro = Are you sure of eliminating the solictiud
-lbl_esta_seguro_e = definitely from the system?
+lbl_type_material = TIPO DE MATERIAL
+lbl_cantidad = CANTIDAD
+lbl_state = ESTADO
+lbl_availability = DISPONIBILIDAD
+btn_options = OPCIONES
+lbl_actualizar_solicitud = Actualizar Inventario
+lbl_id_material = ID Material:
+lbl_type_material = Tipo de Material:
+lbl_cantidad = Cantidad:
+lbl_estado_material = Estado:
+lbl_availability = Disponibilidad:
+lbl_select = Seleccionar si esta disponible
+lbl_cerrar_modal = Cerrar
+lbl_actualizar = Actualizar
+lbl_clean = Eliminar el material Seleccionado
+lbl_esta_seguro = Desea elimianr el material seleccionado
+lbl_esta_seguro_e = Definitivamente del sistema?
 lbl_no = No
-lbl_si = Yes
-lbl_actualizar_imagen_material = Update Material Image
-lbl_cerrar = Close
-lbl_carga_archivos = Load Files Massively
-lbl_cargar_csv = Load CSV
-lbl_cerrar_archivos = Close
-lbl_materiales_1 = Materials
-lbl_nuevo_material = New Material
-lbl_nuevo_form_nuevo = New Material Form
-lbl_type_material = Material Type:
-lbl_cantidad_material = Quantity:
-lbl_estado = Status:
-lbl_bueno = GOOD
-lbl_malo = BAD
-lbl_availability = Availability:
-lbl_add_material: Add Material
+lbl_si = Si
+lbl_actualizar_imagen_material = Actualizar Imagen del Material
+lbl_cerrar = Cerrar
+lbl_carga_archivos = Cargar Masivamente Datos
+lbl_cargar_csv = Cargar CSV
+lbl_cerrar_archivos = Cerrar
+lbl_materiales_1 = Materiales
+lbl_nuevo_material = Nuevo Material
+lbl_nuevo_form_nuevo = Formulario del Nuevo Material
+lbl_type_material = Tipo de Material:
+lbl_cantidad_material = Cantidad:
+lbl_estado = Estado:
+lbl_bueno = NUENO
+lbl_malo = MALO
+lbl_availability = Disponibilidad:
+lbl_add_material: Agregar Material
+lbl_disponibilidad=Disponibilidad
+lbl_tipo_material=Tipo de Material
