--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
@@ -1,71 +1,74 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_usuarios = Statistical Graph Users
-lbl_aqui_grafico_usuarios = Here you will find the report of the date it was modified ordered by the month.
-lbl_usuarios_sistema = System Users
-lbl_aqui_encontraras_usuarios = Here you will find all registered users in the system.
-lbl_anadir_usuario = Add User
+lbl_grafrico_usuarios = Grafrico Estadistico Usuarios
+lbl_aqui_grafico_usuarios = Aqui encuentras un reporte estadistico del mes o meses que fue cambiado el estado de los usuarios.
+lbl_usuarios_sistema = Usuarios del Sistema
+lbl_aqui_encontraras_usuarios = Aqui enocntraras los usuarios registrados en el sistema
+lbl_anadir_usuario = Agregar Usuario
 lbl_ID = ID
 lbl_tipo_doc = TD
-lbl_nombres = NAMES
-lbl_surname = LAST NAME
-lbl_correo = MAIL
-lbl_OPTIONS = OPTIONS
-lbl_roles_usuario = User Roles
-lbl_anadir_rol = Add Role
+lbl_nombres = NOMBRES
+lbl_surname = APELLIDOS
+lbl_correo = CORREO
+lbl_OPTIONS = OPCIONES
+lbl_roles_usuario = Roles de Usuario
+lbl_anadir_rol = Agregar Rol
 lbl_ID = ID
-lbl_NOMBRE = NAME
-lbl_OPCIONES_u = OPTIONS
-lbl_tipos_documento = Types Document
-lbl_add_types = Add T.D
+lbl_NOMBRE = NOMBRE
+lbl_OPCIONES_u = OPCIONES
+lbl_tipos_documento = Tipos de Documento
+lbl_add_types = Agregar T.D
 lbl_id_type = TD
 lbl_sigla = SIGLA
-lbl_nombre_tipo = NAME
-lbl_options = OPTIONS
-lbl_actualizar_usuario = Update User
-lbl_usernames = Names
-lbl_sombre_usuario = Last name
-lbl_seleccione_tipos = Select a type of document
-lbl_numero_documento = Document number
-lbl_direccion_usuario = Address
-lbl_ingrese_telefono = Enter a phone
-lbl_seleccione_estado = Select a new state
-lbl_cerrar = Close
-lbl_actualizar = Update
-lbl_informacion_estado = Information of the selected user
-lbl_username = Name:
-lbl_apellido = Surname:
-lbl_type_document = Type Document:
-lbl_documento = Document:
-lbl_fecha_nacimiento = Date of Birth:
-lbl_mail = Mail:
-lbl_genero = Genre:
-lbl_estado = Status:
-lbl_rol = Role:
-lbl_confirmar = Confirm
-lbl_eliminar_usuario_seleccionado = Delete the selected user
-lbl_estaseguro = Are you sure to delete the user
-lbl_esteaseguro_1 = definitely from the system?
-lbl_si = Yes
+lbl_nombre_tipo = NOMBRE
+lbl_options = OPCIONES
+lbl_actualizar_usuario = Actualizar Usuario
+lbl_usernames = Nombres
+lbl_sombre_usuario = Apellidos
+lbl_seleccione_tipos = Seleccione un tipo de documento
+lbl_numero_documento = Numero de Documento
+lbl_direccion_usuario = Direccion
+lbl_ingrese_telefono = Ingresar su telefono
+lbl_seleccione_estado = Seleccione un nuevo estado
+lbl_cerrar = Cerar
+lbl_actualizar = Actualizar
+lbl_informacion_estado = Informacion del usuario seleccionado
+lbl_username = Nombres:
+lbl_apellido = Apellidos:
+lbl_type_document = Tipos de Documento:
+lbl_documento = Documento:
+lbl_fecha_nacimiento = Fecha De Nacimiento:
+lbl_mail = Correo:
+lbl_genero = Genero:
+lbl_estado = Estado:
+lbl_rol = Rol:
+lbl_confirmar = Confirmar
+lbl_eliminar_usuario_seleccionado = Eleiminar usuario seleccionado
+lbl_estaseguro = Esta seguro de eliminar el usuario
+lbl_esteaseguro_1 = definitivivamente del sistema?
+lbl_si = Si
 lbl_no = No
-lbl_load = Load files massively
-lbl_load = Load CSV
-lbl_cerrar = Close
-btn_load = Load
-lbl_usuarios_sistema=System Users
-lbl_ingrese_telefono = Enter a phone
-lbl_masculino = Male
-lbl_femenino = Female
-lbl_otro = Other
-lbl_seleccione_nuevo_estado = Select a new state
-lbl_usuarios_otro = Users
-lbl_nuevo_usuario = New User
-lbl_form_nuevo_usuario = New User Form
-lbl_ingrese_su_date = Enter your birth date
-lbl_seleccione_rol = Select a role
-lbl_contresenia = Password
-lbl_confirm_password = Confirm Password
-lbl_ingrese_telefono = Enter a phone
-lbl_seleccione_estado = Select state
-lbl_anadir_usuario = Add User
+lbl_load = Carga masiva de Datos
+lbl_load = Cargar CSV
+lbl_cerrar = Cerrar
+btn_load = Cargar
+lbl_usuarios_sistema=Usuarios del Sistema
+lbl_ingrese_telefono = Ingrese su telefono
+lbl_masculino = Hombre
+lbl_femenino = Mujer
+lbl_otro = Otro
+lbl_seleccione_nuevo_estado = Seleccione un nuevo estado
+lbl_usuarios_otro = Usuarios
+lbl_nuevo_usuario = Nuevo Usuario
+lbl_form_nuevo_usuario = Formulario Nuevo Usuario
+lbl_ingrese_su_date = Ingrese su fecha de Nacimiento
+lbl_seleccione_rol = Seleccione un rol
+lbl_contresenia = Cotrase\u00f1a
+lbl_confirm_password = Confirmar Contrase\u00f1a
+lbl_ingrese_telefono = Ingrese su telefono
+lbl_seleccione_estado = Seleccionar Estado
+lbl_anadir_usuario = Agregar Usuario
+lbl_id_tipo=Tipos De Documento
+lbl_apellidos=Apellidos
+lbl_anadir_tipos=Anadir Tipos de Documento
