Enlace la internacionizacion a las 1:21 pm

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario_es.properties
@@ -7,10 +7,10 @@ lbl_inventario = Inventario
 lbl_aqui_encontras = Aqui enocntraras los metariales del almacen
 lbl_anadir_material = Agregar Material
 lbl_id = ID
-lbl_type_material = TIPO DE MATERIAL
-lbl_cantidad = CANTIDAD
+lbl_type_material_1 = TIPO DE MATERIAL
+lbl_cantidad_1 = CANTIDAD
 lbl_state = ESTADO
-lbl_availability = DISPONIBILIDAD
+lbl_availability_1 = DISPONIBILIDAD
 btn_options = OPCIONES
 lbl_actualizar_solicitud = Actualizar Inventario
 lbl_id_material = ID Material:
