--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
@@ -72,3 +72,5 @@ lbl_anadir_usuario = Agregar Usuario
 lbl_id_tipo=Tipos De Documento
 lbl_apellidos=Apellidos
 lbl_anadir_tipos=Anadir Tipos de Documento
+btn_tipos_documento=TIPO DE DOCUMENTO
+btn_apellidos=APELLIDOS
