--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_en.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_en.properties
@@ -21,3 +21,4 @@ lbl_correoElectronico=Email
 lbl_tipoDocumento=Types of Document
 lbl_apellido=Last name
 lbl_contrasenia=Password
+lbl_id_usuario=User Id
