--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_es.properties
@@ -21,3 +21,4 @@ lbl_correoElectronico=Correo Electronico
 lbl_tipoDocumento=Tipos de Documento
 lbl_apellido=Apellidos
 lbl_contrasenia=Contrasenia
+lbl_id_usuario=Id Usuario
