Enlace la internacionizacion del menu de cliente,recreacisonista,administrador,modulo completo administrador a las 1:39 pm

--- a/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador_es.properties
@@ -10,3 +10,4 @@ lbl_control_events=Control Eventos
 lbl_eventos_reservador=Eventos Reservados
 lbl_eventos_realizados=Eventos Realizados
 lbl_inventario=Inventario
+lbl_inicio=Inicio
