Enlace la internacionizacion del menu de cliente,recreacisonista,administrador,modulo completo administrador ademas agregue el icono del sistema en la pestaña del navegador a las 10:56am

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_en.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil_en.properties
@@ -5,7 +5,7 @@ lbl_actaulizar_perfil = Form Update Profile
 lbl_id_user = ID USUARIO
 lbl_seleccione_documento = Select a document type
 lbl_numero_documento = Document number
-lbl_nombre = First name
+lbl_nombre = Names
 lbl_last = Surnames
 lbl_direccion = Address
 lbl_fecha_nacimiento = Birthdate
@@ -19,6 +19,6 @@ lbl_actualizar = Update information
 lbl_seleccione_estado1=Select a new state
 lbl_correoElectronico=Email
 lbl_tipoDocumento=Types of Document
-lbl_apellido=Last name
+lbl_apellido=Surnames
 lbl_contrasenia=Password
 lbl_id_usuario=User Id
