Agregue toda la internacionalizacion del landing page enlazado, ademas realize el modeulo en donde el cliente puede generar un pdf de los eventos que fueron realizados y el administrador los eventos que fueron realizados a todos los usuarios,ademas realize el modulo de servicio al cliente en la parte del administrador

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
@@ -4,7 +4,7 @@
 lbl_grafico_eventos = Grafico Eventos
 lbl_aqui_encontraras_grafrico = Aqui encontraras un grafico estadistico de los eventos que fueron realizados ordenado por meses
 lbl_eventos_reservados = Eventos Reservados
-lbl_aqui_encontraras_aventos_approbnados = Aqui enocntraras los eventos que fueron aprobados
+lbl_aqui_encontraras_aventos_approbnados = Aqui enocntraras los eventos que fueron reservados
 btn_add_address = A\u00f1adir Solicitud
 lbl_id_event = ID
 lbl_usuario_evento = USUARIO
@@ -19,3 +19,5 @@ lbl_id_event = ID
 lbl_state = ESTADO
 btn_anadir_solicitud=Agregar Solicitud
 lbl_estado=ESTADO
+lbl_eventos_realizados = Eventos Realizados
+lbl_aqui_encontraras_aventos_realizados =Aqui enocntraras los eventos que fueron realizados 
