--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_ventas_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_ventas_es.properties
@@ -42,3 +42,12 @@ LBL_DIRECCION_1=DIRECCION
 lbl_estado_1=ESTADO
 lbl_fecha_soliciutd=Fecha Solicitud:
 lbl_confirmar=Confirmar
+lbl_eventos_finalizados=Eventos Finalizados
+lbl_acumulado_hoy=Total Acumulado Hoy
+lbl_usuarios_nuevos=Nuevos Usuarios
+lbl_ir_eventos=Ir a eventos...
+lbl_ultimasveinticuatro_horas=Ultimas 24h
+lbl_ventas_diarias=Ventas Diarias
+lbl_actualizado_hoy=Actualizados ahora
+lbl_today_sales=Incrementaron hoy las ventas
+lbl_solicitudes=Solicitud
