--- a/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador_es.properties
@@ -11,3 +11,4 @@ lbl_eventos_reservador=Eventos Reservados
 lbl_eventos_realizados=Eventos Realizados
 lbl_inventario=Inventario
 lbl_inicio=Inicio
+lbl_servicio=Servicio Al Cliente
