--- a/digital_events_repository/src/java/digitalevents/languaje/pagina/Header_en.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/pagina/Header_en.properties
@@ -10,5 +10,5 @@ lbl_ingresar=Enter
 lbl_registrarse=Check in
 lbl_iniciar_session= Log in
 lbl_servicios_1=Services
-lbl_registrarse=Registry
+lbl_registrarse=Sign Up
 lbl_iniciar_session_1=Log in
