Corregi la intrenacionalizacion corregi el modelo el modulo de servicio al cliente en el administrador con el grafrico

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios_es.properties
@@ -54,6 +54,8 @@ lbl_load = Cargar CSV
 lbl_cerrar = Cerrar
 btn_load = Cargar
 lbl_usuarios_sistema=Usuarios del Sistema
+lbl_ingrese_nombres=Ingrese sus nombres...
+lbl_ingrese_apellidos=Ingrese sus apellidos..
 lbl_ingrese_telefono = Ingrese su tel\u00e9fono
 lbl_masculino = Hombre
 lbl_femenino = Mujer
