--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos_es.properties
@@ -2,7 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 lbl_grafico_eventos = Grafico Eventos
+lbl_grafico_servicio = Grafico Servicio Al Cliente
 lbl_aqui_encontraras_grafrico = Aqu\u00ed encontraras un gr\u00e1fico estad\u00edstico de los eventos que fueron realizados ordenado por meses
+lbl_aqui_encontraras_grafricoservicio = Here you will find a statistical chart of the client service that were performed
 lbl_eventos_reservados = Eventos Reservados
 lbl_aqui_encontraras_aventos_approbnados = Aqu\u00ed encontraras los eventos que fueron reservados
 btn_add_address = A\u00f1adir Solicitud
